chore: Add swagger delete route setting,
Add sucess messages for put and delete
