# swagger.json
@@ -8,7 +8,7 @@
     "paths": {
         "/movies": {
             "get": {
-                "tags": ["Movie"],
+                "tags": ["Movies "],
                 "summary": "Obter todos os filmes",
                 "responses": {
                     "200": {
@@ -29,7 +29,7 @@
         },
         "/movies/{id}": {
             "put": {
-                "tags": ["Movie"],
+                "tags": ["Movies "],
                 "summary": "Atualizar um filme existente",
                 "parameters": [
                     {
@@ -61,6 +61,32 @@
                     },
                     "500": {
                         "description": "Erro interno do servidor"
+                    }
+                }
+            },
+            "delete": {
+                "tags": ["Movie"],
+                "summary": "Remover um filme",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "description": "ID do filme a ser removido",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Filme removido com sucesso"
+                    },
+                    "404": {
+                        "description": "O filme não foi encontrado"
+                    },
+                    "500": {
+                        "description": "Não foi possível remover o filme"
                     }
                 }
             }
